<resources>
    <string name="app_name">FinalAplication</string>
    <string name="cabeçalho">Cabeçalho</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_6">6</string>
    <string name="btn_5">5</string>
    <string name="btn_4">4</string>
    <string name="btn_3">3</string>
    <string name="btn_2">2</string>
    <string name="btn_1">1</string>
    <string name="btn_0">0</string>
    <string name="btn_clear">C</string>
    <string name="btn_soma">+</string>
    <string name="btn_subtracao">-</string>
    <string name="btn_ponto">.</string>
    <string name="btn_ig">=</string>
    <string name="btn_divisao">/</string>
    <string name="btn_multiplicacao">*</string>
    <string name="btn_inicio">inicio</string>
    <string name="btn_calcular">Calculadora</string>
    <string name="login">Login</string>
    <string name="registrar">Registrar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="n0">0</string>
    <string name="n1">1</string>
    <string name="n2">2</string>
    <string name="n3">3</string>
    <string name="n4">4</string>
    <string name="n5">5</string>
    <string name="n6">6</string>
    <string name="n7">7</string>
    <string name="n8">8</string>
    <string name="n9">9</string>
    <string name="asterisco">*</string>
    <string name="jogodavelha">#</string>
    <string name="ligar">ligar</string>
    <string name="nt1">NOTA 1:</string>
    <string name="nt2">NOTA 2:</string>
    <string name="nt3">NOTA 3:</string>
    <string name="nt4">NOTA 4:</string>
    <string name="btn_cal"> CALCULAR</string>
    <string name="resul">RESULTADO:</string>
</resources>
